--- a/index.html
+++ b/index.html
@@ -1,15 +1,9 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Plain Hardware</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-</head>
-
-<body>
-    <h1>Welcome</h1>
-</body>
-
+  <head>
+    <meta charset="UTF-8">
+    <title>Plain Hardware | Hobby and Electronic store</title>
+  </head>
+  <body>
+  <script type="text/javascript" src="main.js"></script></body>
 </html>
