--- a/index.html
+++ b/index.html
@@ -1,9 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Plain Hardware | Hobby and Electronic store</title>
-  </head>
-  <body>
-  <script type="text/javascript" src="main.js"></script></body>
-</html>
+Hello<script type="text/javascript" src="main.js"></script>
