--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-Hello<script type="text/javascript" src="main.js"></script>
+<head><link rel="shortcut icon" href="favicon.ico"></head>Hello<script type="text/javascript" src="main.js"></script>
