--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<head><link rel="shortcut icon" href="favicon.ico"></head>Hello<script type="text/javascript" src="main.js"></script>
+<!doctype html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <title>Example template</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="shortcut icon" href="favicon.ico"></head>
+
+<body>
+    <img src="logo.png">
+<script type="text/javascript" src="main.js"></script></body>
+
+</html>
