--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,11 @@
 <!doctype html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
-    <title>Example template</title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-
 <body>
     <img src="logo.png">
 </body>
-
 </html>
