--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 <!doctype html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
-    <title>Example template</title>
+    <title>Plain Hardware | Hobby and Electronic store</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="shortcut icon" href="favicon.ico"></head>
-
 <body>
     <img src="logo.png">
 <script type="text/javascript" src="main.js"></script></body>
-
 </html>
