--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <title>Plain Hardware | Hobby and Electronic store</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="shortcut icon" href="favicon.ico"></head>
+
 <body>
-    <img src="logo.png">
+    <img src="static/assets/logo.7e9c30e4c60c7602fc9a4bc434d5f8c0.png">
 <script type="text/javascript" src="main.js"></script></body>
+
 </html>
