--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 
 <body>
     <img src="static/assets/logo.7e9c30e4c60c7602fc9a4bc434d5f8c0.png">
-<script type="text/javascript" src="main.js"></script></body>
+<script type="text/javascript" src="main.4c46bdeaa138dbf0178f.js?3f86084fdfa90f7bfb50"></script></body>
 
 </html>
