--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Plain Hardware | Hobby and Electronic store</title>
+    <title>Plain Hardware</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="shortcut icon" href="favicon.ico"></head>
+<link rel="shortcut icon" href="favicon.ico"><link href="main.1253fe9b89cdcb0abb90.css" rel="stylesheet"></head>
 
 <body>
     <img src="static/assets/logo.7e9c30e4c60c7602fc9a4bc434d5f8c0.png">
-<script type="text/javascript" src="main.2514e453f0202259eabc.js?2f7c45029c3096b7ef99"></script></body>
+<script type="text/javascript" src="main.81ca77e470d5b3f250a6.js"></script></body>
 
 </html>
