--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en" manifest="site.webmanifest">
 
 <head>
     <meta charset="utf-8">
-    <title>Plain Hardware</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="shortcut icon" href="favicon.ico"><link href="main.1253fe9b89cdcb0abb90.css" rel="stylesheet"></head>
+    <meta content="ie=edge" http-equiv="x-ua-compatible">
+    <title>Plain Hardware</title>
+    <link href="favicon.ico" rel="shortcut icon" />
+    <style>
+        .unsupported-browser {
+            display: none;
+        }
+    </style>
+<link href="main.d4af9033c998715f7344.css" rel="stylesheet"></head>
 
 <body>
-    <img src="static/assets/logo.7e9c30e4c60c7602fc9a4bc434d5f8c0.png">
+    <div class="unsupported-browser">
+        Sorry, your browser is not supported. Please upgrade to the latest version or switch your browser to use this
+        site. See <a href="http://outdatedbrowser.com/">outdatedbrowser.com</a> for options.
+    </div>
+    <div id="app">
+    </div>
 <script type="text/javascript" src="main.81ca77e470d5b3f250a6.js"></script></body>
 
 </html>
