--- a/index.html
+++ b/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" manifest="site.webmanifest">
+<html lang="en" manifest="static/assets/site.webmanifest">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="ie=edge" http-equiv="x-ua-compatible">
     <title>Plain Hardware</title>
-    <link href="favicon.ico" rel="shortcut icon" />
-    <style>
-        .unsupported-browser {
-            display: none;
-        }
-    </style>
-<link href="main.d4af9033c998715f7344.css" rel="stylesheet"></head>
+    <link href="static/assets/favicon.ico" rel="shortcut icon" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css"
+        integrity="sha256-PF6MatZtiJ8/c9O9HQ8uSUXr++R9KBYu4gbNG5511WE=" crossorigin="anonymous" />
+<link href="main.92ad02d1f7912002c65e.css" rel="stylesheet"></head>
 
 <body>
     <div class="unsupported-browser">
@@ -20,6 +17,7 @@
         site. See <a href="http://outdatedbrowser.com/">outdatedbrowser.com</a> for options.
     </div>
     <div id="app">
+        <div class="app-spinner"><i class="fa fa-spinner fa-spin fa-5x" aria-hidden="true"></i></div>
     </div>
 <script type="text/javascript" src="main.81ca77e470d5b3f250a6.js"></script></body>
 
