--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta content="ie=edge" http-equiv="x-ua-compatible">
     <title>Plain Hardware</title>
     <link href="static/assets/favicon.ico" rel="shortcut icon" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css"
-        integrity="sha256-PF6MatZtiJ8/c9O9HQ8uSUXr++R9KBYu4gbNG5511WE=" crossorigin="anonymous" />
-<link href="main.92ad02d1f7912002c65e.css" rel="stylesheet"></head>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/js/fontawesome.min.js"
+        integrity="sha256-TNt3hxvmQwcyyPTYevC79inikYlBxATH32Osdz0jc+s=" crossorigin="anonymous"></script>
+<link href="main.cd9abf938b7a6890f5d0.css" rel="stylesheet"></head>
 
 <body>
     <div class="unsupported-browser">
