--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta content="ie=edge" http-equiv="x-ua-compatible">
     <title>Plain Hardware</title>
     <link href="static/assets/favicon.ico" rel="shortcut icon" />
-    <script src="//cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/js/fontawesome.min.js"
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/js/fontawesome.min.js"
         integrity="sha256-TNt3hxvmQwcyyPTYevC79inikYlBxATH32Osdz0jc+s=" crossorigin="anonymous"></script>
-<link href="main.cd9abf938b7a6890f5d0.css" rel="stylesheet"></head>
+<link href="main.05eab2e82a28f1be6fb5.css" rel="stylesheet"></head>
 
 <body>
     <div class="unsupported-browser">
