--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" manifest="/static/assets/site.webmanifest">
+<html lang="en" manifest="static/assets/webmanifest.json">
 
 <head>
     <meta charset="utf-8">
@@ -9,7 +9,7 @@
     <link href="static/assets/favicon.ico" rel="shortcut icon" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/js/fontawesome.min.js"
         integrity="sha256-TNt3hxvmQwcyyPTYevC79inikYlBxATH32Osdz0jc+s=" crossorigin="anonymous"></script>
-<link href="main.18406ff528850afbd552.css" rel="stylesheet"></head>
+<link href="main.075c2c1e715244167d6e.css" rel="stylesheet"></head>
 
 <body>
     <div class="unsupported-browser">
