--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" manifest="manifest.json">
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -7,9 +7,10 @@
     <meta content="ie=edge" http-equiv="x-ua-compatible">
     <title>Plain Hardware</title>
     <link href="static/assets/favicon.ico" rel="shortcut icon" />
+    <link rel="manifest" href="manifest.json" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/js/fontawesome.min.js"
         integrity="sha256-TNt3hxvmQwcyyPTYevC79inikYlBxATH32Osdz0jc+s=" crossorigin="anonymous"></script>
-<link href="main.e87cb9a6e66939e33592.css" rel="stylesheet"></head>
+<link href="main.d8b61b07c212dd7d0368.css" rel="stylesheet"></head>
 
 <body>
     <div class="unsupported-browser">
