--- a/index.html
+++ b/index.html
@@ -8,9 +8,20 @@
     <title>Plain Hardware</title>
     <link href="static/assets/favicon.ico" rel="shortcut icon" />
     <link rel="manifest" href="manifest.json" />
+    <style>
+        .unsupported-browser {
+            display: none;
+        }
+
+        div.app-spinner {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+        }
+    </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/js/fontawesome.min.js"
         integrity="sha256-TNt3hxvmQwcyyPTYevC79inikYlBxATH32Osdz0jc+s=" crossorigin="anonymous"></script>
-<link href="main.d8b61b07c212dd7d0368.css" rel="stylesheet"></head>
+<link href="main.2c34b84db988a76f1d0d.css" rel="stylesheet"></head>
 
 <body>
     <div class="unsupported-browser">
