--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Plain Hardware</title>
     <link href="static/assets/favicon.ico" rel="shortcut icon" />
     <link rel="manifest" href="manifest.json" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/fontawesome.min.css"
+        integrity="sha256-AaQqnjfGDRZd/lUp0Dvy7URGOyRsh8g9JdWUkyYxNfI=" crossorigin="anonymous" />
     <style>
         .unsupported-browser {
             display: none;
@@ -19,9 +21,7 @@
             left: 50%;
         }
     </style>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/js/fontawesome.min.js"
-        integrity="sha256-TNt3hxvmQwcyyPTYevC79inikYlBxATH32Osdz0jc+s=" crossorigin="anonymous"></script>
-<link href="main.2c34b84db988a76f1d0d.css" rel="stylesheet"></head>
+<link href="main.7d27717847721ca5442b.css" rel="stylesheet"></head>
 
 <body>
     <div class="unsupported-browser">
