--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Plain Hardware</title>
     <link href="static/assets/favicon.ico" rel="shortcut icon" />
     <link rel="manifest" href="manifest.json" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/fontawesome.min.css"
-        integrity="sha256-AaQqnjfGDRZd/lUp0Dvy7URGOyRsh8g9JdWUkyYxNfI=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/fontawesome.css"
+        integrity="sha256-46p0lbhGHjtMfaQccm2r3tv3hy9QR3ZG7PH8mlcURnw=" crossorigin="anonymous" />
     <style>
         .unsupported-browser {
             display: none;
@@ -21,7 +21,7 @@
             left: 50%;
         }
     </style>
-<link href="main.7d27717847721ca5442b.css" rel="stylesheet"></head>
+<link href="main.ad20ddb98b680e1eb718.css" rel="stylesheet"></head>
 
 <body>
     <div class="unsupported-browser">
