--- a/index.html
+++ b/index.html
@@ -8,20 +8,19 @@
     <title>Plain Hardware</title>
     <link href="static/assets/favicon.ico" rel="shortcut icon" />
     <link rel="manifest" href="manifest.json" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/fontawesome.css"
-        integrity="sha256-46p0lbhGHjtMfaQccm2r3tv3hy9QR3ZG7PH8mlcURnw=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+        integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous" />
     <style>
         .unsupported-browser {
             display: none;
         }
-
         div.app-spinner {
             position: fixed;
             top: 50%;
             left: 50%;
         }
     </style>
-<link href="main.ad20ddb98b680e1eb718.css" rel="stylesheet"></head>
+<link href="main.6a5489c12f6bb0a64068.css" rel="stylesheet"></head>
 
 <body>
     <div class="unsupported-browser">
