--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,35 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="utf-8">
-    <title><%= htmlWebpackPlugin.options.title %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta content="ie=edge" http-equiv="x-ua-compatible">
+    <title><%= title %></title>
+    <link href="static/assets/favicon.ico" rel="shortcut icon" />
+    <link rel="manifest" href="manifest.json" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+        integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous" />
+    <style>
+        .unsupported-browser {
+            display: none;
+        }
+        div.app-spinner {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+        }
+    </style>
 </head>
 
 <body>
-    <img src="<%= require('./assets/logo.png') %>">
+    <div class="unsupported-browser">
+        Sorry, your browser is not supported. Please upgrade to the latest version or switch your browser to use this
+        site. See <a href="http://outdatedbrowser.com/">outdatedbrowser.com</a> for options.
+    </div>
+    <div id="app">
+        <div class="app-spinner"><i class="fa fa-spinner fa-spin fa-5x" aria-hidden="true"></i></div>
+    </div>
 </body>
 
 </html>
