--- a/index.html
+++ b/index.html
@@ -8,19 +8,40 @@
     <title>Plain Hardware</title>
     <link href="static/assets/favicon.ico" rel="shortcut icon" />
     <link rel="manifest" href="manifest.json" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-        integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous" />
     <style>
         .unsupported-browser {
             display: none;
         }
+
         div.app-spinner {
             position: fixed;
             top: 50%;
             left: 50%;
         }
+
+        @keyframes spinner {
+            to {
+                transform: rotate(360deg);
+            }
+        }
+
+        .spinner:before {
+            content: '';
+            box-sizing: border-box;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 20px;
+            height: 20px;
+            margin-top: -10px;
+            margin-left: -10px;
+            border-radius: 50%;
+            border: 2px solid #ccc;
+            border-top-color: #000;
+            animation: spinner .6s linear infinite;
+        }
     </style>
-<link href="main.a02bea92af55e9ef98cb.css" rel="stylesheet"></head>
+<link href="main.1d919d06a35faf938259.css" rel="stylesheet"></head>
 
 <body>
     <div class="unsupported-browser">
@@ -28,7 +49,8 @@
         site. See <a href="http://outdatedbrowser.com/">outdatedbrowser.com</a> for options.
     </div>
     <div id="app">
-        <div class="app-spinner"><i class="fa fa-spinner fa-spin fa-5x" aria-hidden="true"></i></div>
+        <div class="spinner"></div>
+    </div>
     </div>
 <script type="text/javascript" src="main.942153b60356f13e4b66.js"></script></body>
 
