--- a/index.html
+++ b/index.html
@@ -13,44 +13,18 @@
             display: none;
         }
 
-        div.app-spinner {
-            position: fixed;
-            top: 50%;
-            left: 50%;
-        }
-
-        @keyframes spinner {
-            to {
-                transform: rotate(360deg);
-            }
-        }
-
-        .spinner:before {
-            content: '';
-            box-sizing: border-box;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            width: 20px;
-            height: 20px;
-            margin-top: -10px;
-            margin-left: -10px;
-            border-radius: 50%;
-            border: 2px solid #ccc;
-            border-top-color: #000;
-            animation: spinner .6s linear infinite;
-        }
+        div.app-spinner { position: fixed; top: 50%; left: 50%; } 
+        @keyframes app-spinner { to { transform: rotate(360deg); } }
+        div.app-spinner:before { content: ''; box-sizing: border-box; position: absolute; top: 50%; left: 50%; width: 20px; height: 20px; margin-top: -10px; margin-left: -10px; border-radius: 50%; border: 2px solid #ccc; border-top-color: #000; animation: app-spinner .6s linear infinite; }
     </style>
-<link href="main.d5bab3002bf65b7f70a9.css" rel="stylesheet"></head>
+<link href="main.b803c1ca018afd7a1501.css" rel="stylesheet"></head>
 
 <body>
     <div class="unsupported-browser">
         Sorry, your browser is not supported. Please upgrade to the latest version or switch your browser to use this
         site. See <a href="http://outdatedbrowser.com/">outdatedbrowser.com</a> for options.
     </div>
-    <div id="app">
-        <div class="spinner"></div>
-    </div>
+    <div id="app"> <div class="app-spinner"></div> </div>
 <script type="text/javascript" src="main.942153b60356f13e4b66.js"></script></body>
 
 </html>
