--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
         div.app-spinner { position: fixed; top: 50%; left: 50%; } 
         @keyframes app-spinner { to { transform: rotate(360deg); } }
-        div.app-spinner:before { content: ''; box-sizing: border-box; position: absolute; top: 50%; left: 50%; width: 20px; height: 20px; margin-top: -10px; margin-left: -10px; border-radius: 50%; border: 2px solid #ccc; border-top-color: #000; animation: app-spinner .6s linear infinite; }
+        div.app-spinner:before { content: ''; box-sizing: border-box; position: absolute; top: 50%; left: 50%; width: 40px; height: 40px; margin-top: -20px; margin-left: -20px; border-radius: 50%; border: 2px soli transparent; border-top-color: #07d;border-bottom-color: #07d; animation: app-spinner .6s linear infinite; }
     </style>
-<link href="main.b803c1ca018afd7a1501.css" rel="stylesheet"></head>
+<link href="main.8c42b26a1f21ae05f12b.css" rel="stylesheet"></head>
 
 <body>
     <div class="unsupported-browser">
