--- a/index.html
+++ b/index.html
@@ -9,15 +9,12 @@
     <link href="static/assets/favicon.ico" rel="shortcut icon" />
     <link rel="manifest" href="manifest.json" />
     <style>
-        .unsupported-browser {
-            display: none;
-        }
-
+        .unsupported-browser { display: none; }
         div.app-spinner { position: fixed; top: 50%; left: 50%; } 
         @keyframes app-spinner { to { transform: rotate(360deg); } }
-        div.app-spinner:before { content: ''; box-sizing: border-box; position: absolute; top: 50%; left: 50%; width: 40px; height: 40px; margin-top: -20px; margin-left: -20px; border-radius: 50%; border: 2px soli transparent; border-top-color: #07d;border-bottom-color: #07d; animation: app-spinner .6s linear infinite; }
+        div.app-spinner:before { content: ''; box-sizing: border-box; position: absolute; top: 50%; left: 50%; width: 40px; height: 40px; margin-top: -20px; margin-left: -20px; border-radius: 50%; border: 2px soli transparent; border-top-color: #07d;border-bottom-color: #07d; animation: app-spinner .8s ease infinite; }
     </style>
-<link href="main.56e57d0e3832b55271d1.css" rel="stylesheet"></head>
+<link href="main.e906a801755b9a093261.css" rel="stylesheet"></head>
 
 <body>
     <div class="unsupported-browser">
