--- a/index.html
+++ b/index.html
@@ -8,20 +8,16 @@
     <title>Plain Hardware</title>
     <link href="static/assets/favicon.ico" rel="shortcut icon" />
     <link rel="manifest" href="manifest.json" />
-    <style>
-        .unsupported-browser { display: none; }
-        div.app-spinner { position: fixed; top: 50%; left: 50%; } 
-        @keyframes app-spinner { to { transform: rotate(360deg); } }
-        div.app-spinner:before { content: ''; box-sizing: border-box; position: absolute; top: 50%; left: 50%; width: 40px; height: 40px; margin-top: -20px; margin-left: -20px; border-radius: 50%; border: 2px solid transparent; border-top-color: #07d;border-bottom-color: #07d; animation: app-spinner .8s ease infinite; }
-    </style>
-<link href="main.778824472421cedff59e.css" rel="stylesheet"></head>
+<link href="main.1c3629521d8b281fea4d.css" rel="stylesheet"></head>
 
 <body>
     <div class="unsupported-browser">
         Sorry, your browser is not supported. Please upgrade to the latest version or switch your browser to use this
         site. See <a href="http://outdatedbrowser.com/">outdatedbrowser.com</a> for options.
     </div>
-    <div id="app"> <div class="app-spinner"></div> </div>
-<script type="text/javascript" src="main.ddb77d867234ef3236a4.js"></script></body>
+    <div id="app">
+        <div class="app-spinner"></div>
+    </div>
+<script type="text/javascript" src="main.942153b60356f13e4b66.js"></script></body>
 
 </html>
