--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Plain Hardware</title>
     <link href="static/assets/favicon.ico" rel="shortcut icon" />
     <link rel="manifest" href="manifest.json" />
-<link href="main.05bd42bce8b407664594.css" rel="stylesheet"></head>
+<link href="main.c66d39c9b6ad046d89f2.css" rel="stylesheet"></head>
 
 <body>
     <div class="unsupported-browser">
@@ -18,6 +18,6 @@
     <div id="app">
         <div class="app-spinner"></div>
     </div>
-<script type="text/javascript" src="main.9b4e2cbbc0ee6b365955.js"></script></body>
+<script type="text/javascript" src="vendors~main.7176dbe4340f51654691.js"></script><script type="text/javascript" src="main.47bf75c34862c5d1b78c.js"></script></body>
 
 </html>
