--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Plain Hardware</title>
     <link href="static/assets/favicon.ico" rel="shortcut icon" />
     <link rel="manifest" href="manifest.json" />
-<link href="main.df4bfff3ed2cdd48e530.css" rel="stylesheet"></head>
+<link href="1.9c821d5553fdb65bc2f2.css" rel="stylesheet"><link href="main.29a8e628958e099c8562.css" rel="stylesheet"></head>
 
 <body>
     <div class="unsupported-browser">
@@ -18,6 +18,6 @@
     <div id="app">
         <div class="app-spinner"></div>
     </div>
-<script type="text/javascript" src="vendors~main.14d2e4dd6345df132e7c.js"></script><script type="text/javascript" src="main.20a0784e456d97835647.js"></script></body>
+<script type="text/javascript" src="vendors~main.affd9c32fe1229623d8b.js"></script><script type="text/javascript" src="main.207da55c41fa477e4536.js"></script></body>
 
 </html>
