--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Plain Hardware</title>
     <link href="static/assets/favicon.ico" rel="shortcut icon" />
     <link rel="manifest" href="manifest.json" />
-<link href="1.86f39b0845c82a6fd5e5.css" rel="stylesheet"><link href="main.29a8e628958e099c8562.css" rel="stylesheet"></head>
+<link href="main.8e23289afc86b45abdef.css" rel="stylesheet"></head>
 
 <body>
     <div class="unsupported-browser">
@@ -18,6 +18,6 @@
     <div id="app">
         <div class="app-spinner"></div>
     </div>
-<script type="text/javascript" src="vendors~main.ce64c0bdbba7d865fe60.js"></script><script type="text/javascript" src="main.c78c92ddfc65ea4561eb.js"></script></body>
+<script type="text/javascript" src="vendors~main.14d2e4dd6345df132e7c.js"></script><script type="text/javascript" src="main.55cdb236f266bf0dfd6e.js"></script></body>
 
 </html>
