--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Plain Hardware</title>
     <link href="static/assets/favicon.ico" rel="shortcut icon" />
     <link rel="manifest" href="manifest.json" />
-<link href="main.8e23289afc86b45abdef.css" rel="stylesheet"></head>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+<link href="main.29a8e628958e099c8562.css" rel="stylesheet"></head>
 
 <body>
     <div class="unsupported-browser">
@@ -18,6 +19,6 @@
     <div id="app">
         <div class="app-spinner"></div>
     </div>
-<script type="text/javascript" src="vendors~main.14d2e4dd6345df132e7c.js"></script><script type="text/javascript" src="main.6a6eae4738727043e441.js"></script></body>
+<script type="text/javascript" src="vendors~main.026de790f174de6429c7.js"></script><script type="text/javascript" src="main.2a1f406ff1ef45e353bf.js"></script></body>
 
 </html>
