--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <title><%= title %></title>
     <link href="static/assets/favicon.ico" rel="shortcut icon" />
     <link rel="manifest" href="manifest.json" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
 </head>
 
 <body>
