move loader/spinner to html

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <title><%= title %></title>
     <link href="static/assets/favicon.ico" rel="shortcut icon" />
     <link rel="manifest" href="manifest.json" />
+    <style>.unsupported-browser{display:none}div.app-spinner{position:fixed;top:50%;left:50%}@-webkit-keyframes app-spinner{to{transform:rotate(1turn)}}@keyframes app-spinner{to{transform:rotate(1turn)}}div.app-spinner:before{content:"";box-sizing:border-box;position:absolute;top:50%;left:50%;width:40px;height:40px;margin-top:-20px;margin-left:-20px;border-radius:50%;border-color:#07d transparent;border-style:solid;border-width:2px;-webkit-animation:app-spinner .8s ease infinite;animation:app-spinner .8s ease infinite}</style>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
 </head>
 
