--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <title>Plain Hardware</title>
     <link href="static/assets/favicon.ico" rel="shortcut icon" />
     <link rel="manifest" href="manifest.json" />
+    <style>.unsupported-browser{display:none}div.app-spinner{position:fixed;top:50%;left:50%}@-webkit-keyframes app-spinner{to{transform:rotate(1turn)}}@keyframes app-spinner{to{transform:rotate(1turn)}}div.app-spinner:before{content:"";box-sizing:border-box;position:absolute;top:50%;left:50%;width:40px;height:40px;margin-top:-20px;margin-left:-20px;border-radius:50%;border-color:#07d transparent;border-style:solid;border-width:2px;-webkit-animation:app-spinner .8s ease infinite;animation:app-spinner .8s ease infinite}</style>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
-<link href="main.29a8e628958e099c8562.css" rel="stylesheet"></head>
+<link href="main.1288a299be1847d3a6ad.css" rel="stylesheet"></head>
 
 <body>
     <div class="unsupported-browser">
@@ -19,6 +20,6 @@
     <div id="app">
         <div class="app-spinner"></div>
     </div>
-<script type="text/javascript" src="vendors~main.fdd9e229d2dab6006a4b.js"></script><script type="text/javascript" src="main.f2052fd775ab537a8048.js"></script></body>
+<script type="text/javascript" src="vendors~main.431f3a6c38abbddf4e67.js"></script><script type="text/javascript" src="main.e4a4625e4411f4367178.js"></script></body>
 
 </html>
