--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,8 @@
     <div id="app">
         <div class="app-spinner"></div>
     </div>
+    <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
 </body>
 
 </html>
