--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <div id="app">
         <div class="app-spinner"></div>
     </div>
-<script type="text/javascript" src="vendors~main.cd08905ffa990045a897.js"></script><script type="text/javascript" src="main.acadce14a811f40bff88.js"></script></body>
+    <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+<script type="text/javascript" src="vendors~main.3b6c397658927d4bff93.js"></script><script type="text/javascript" src="main.4a30c14e2115eaeff086.js"></script></body>
 
 </html>
