--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="manifest" href="manifest.json" />
     <meta http-equiv="Content-Security-Policy" content="require-sri-for script style">
     <style>.unsupported-browser{display:none}div.app-spinner{position:fixed;top:50%;left:50%}@-webkit-keyframes app-spinner{to{transform:rotate(1turn)}}@keyframes app-spinner{to{transform:rotate(1turn)}}div.app-spinner:before{content:"";box-sizing:border-box;position:absolute;top:50%;left:50%;width:40px;height:40px;margin-top:-20px;margin-left:-20px;border-radius:50%;border-color:#07d transparent;border-style:solid;border-width:2px;-webkit-animation:app-spinner .8s ease infinite;animation:app-spinner .8s ease infinite}</style>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <link rel="stylesheet"crossorigin href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" integrity="sha384-eDrYuF64//nsaxepFGmz8Y2lnmvoFXlg07+6zq/ZNVNKLgi2C/dWAmPEO7fF5MLh">
 <link href="main.1288a299be1847d3a6ad.css" rel="stylesheet"></head>
 
 <body>
@@ -21,7 +21,7 @@
     <div id="app">
         <div class="app-spinner"></div>
     </div>
-    <script crossorigin src="https://unpkg.com/react@16.9.0/umd/react.production.min.js"integrity="sha384-XCkwnPTQUF6/knDyAdScDfjTRGGbMqivPLvXfe4XughFhcWhZatKk2jZWuoBSgcNz"></script>
+    <script crossorigin src="https://unpkg.com/react@16.9.0/umd/react.production.min.js"integrity="sha384-CkwnPTQUF6/knDyAdScDfjTRGGbMqivPLvXfe4XughFhcWhZatKk2jZWuoBSgcNz"></script>
     <script crossorigin src="https://unpkg.com/react-dom@16.9.0/umd/react-dom.production.min.js"integrity="sha384-2MsSfEEGJ2Rogg7MLVzlu18tndW7K3SJ4i4b9kxTdVP9Mew3syLP9P+ieLx1BjCe"></script>
 <script type="text/javascript" src="vendors~main.3b6c397658927d4bff93.js"></script><script type="text/javascript" src="main.4a30c14e2115eaeff086.js"></script></body>
 
