--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="manifest" href="manifest.json" />
     <meta http-equiv="Content-Security-Policy" content="require-sri-for script style">
     <style>.unsupported-browser{display:none}div.app-spinner{position:fixed;top:50%;left:50%}@-webkit-keyframes app-spinner{to{transform:rotate(1turn)}}@keyframes app-spinner{to{transform:rotate(1turn)}}div.app-spinner:before{content:"";box-sizing:border-box;position:absolute;top:50%;left:50%;width:40px;height:40px;margin-top:-20px;margin-left:-20px;border-radius:50%;border-color:#07d transparent;border-style:solid;border-width:2px;-webkit-animation:app-spinner .8s ease infinite;animation:app-spinner .8s ease infinite}</style>
-    <link rel="stylesheet"crossorigin href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" integrity="sha384-eDrYuF64//nsaxepFGmz8Y2lnmvoFXlg07+6zq/ZNVNKLgi2C/dWAmPEO7fF5MLh">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" integrity="sha384-eDrYuF64//nsaxepFGmz8Y2lnmvoFXlg07+6zq/ZNVNKLgi2C/dWAmPEO7fF5MLh" crossorigin="anonymous">
 <link href="main.1288a299be1847d3a6ad.css" rel="stylesheet"></head>
 
 <body>
