Content Security Policy

--- a/src/index.html
+++ b/src/index.html
@@ -10,48 +10,9 @@
     <link rel="manifest" href="manifest.json" />
     <meta http-equiv="Content-Security-Policy"
         content=" default-src 'self'; script-src 'self' https://unpkg.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src https://fonts.gstatic.com">
-    <style>
-        .unsupported-browser {
-            display: none
-        }
-
-        div.app-spinner {
-            position: fixed;
-            top: 50%;
-            left: 50%
-        }
-
-        @-webkit-keyframes app-spinner {
-            to {
-                transform: rotate(1turn)
-            }
-        }
-
-        @keyframes app-spinner {
-            to {
-                transform: rotate(1turn)
-            }
-        }
-
-        div.app-spinner:before {
-            content: "";
-            box-sizing: border-box;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            width: 40px;
-            height: 40px;
-            margin-top: -20px;
-            margin-left: -20px;
-            border-radius: 50%;
-            border-color: #07d transparent;
-            border-style: solid;
-            border-width: 2px;
-            -webkit-animation: app-spinner .8s ease infinite;
-            animation: app-spinner .8s ease infinite
-        }
-    </style>
+    <style> .unsupported-browser { display: none } div.app-spinner { position: fixed; top: 50%; left: 50% } @-webkit-keyframes app-spinner { to { transform: rotate(1turn) } } @keyframes app-spinner { to { transform: rotate(1turn) } } div.app-spinner:before { content: ""; box-sizing: border-box; position: absolute; top: 50%; left: 50%; width: 40px; height: 40px; margin-top: -20px; margin-left: -20px; border-radius: 50%; border-color: #07d transparent; border-style: solid; border-width: 2px; -webkit-animation: app-spinner .8s ease infinite; animation: app-spinner .8s ease infinite } </style>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 
 <body>
