--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <style> .unsupported-browser { display: none } div.app-spinner { position: fixed; top: 50%; left: 50% } @-webkit-keyframes app-spinner { to { transform: rotate(1turn) } } @keyframes app-spinner { to { transform: rotate(1turn) } } div.app-spinner:before { content: ""; box-sizing: border-box; position: absolute; top: 50%; left: 50%; width: 40px; height: 40px; margin-top: -20px; margin-left: -20px; border-radius: 50%; border-color: #07d transparent; border-style: solid; border-width: 2px; -webkit-animation: app-spinner .8s ease infinite; animation: app-spinner .8s ease infinite } </style>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<link href="main.1288a299be1847d3a6ad.css" rel="stylesheet"></head>
+<link href="index.v1.ph.css" rel="stylesheet" integrity="sha256-QjrYVixrX26Zigp+Fiqrz6k8DpsVTReAwZnKZIoiiFQ= sha384-FU7AKajrPAssPvGedLwCdCHFd/i33seNWMR6ilW/FLEGongjOtRdfPRVGxwGtTFV" crossorigin="anonymous"></head>
 
 <body>
     <div class="unsupported-browser">
@@ -27,6 +27,6 @@
         integrity="sha384-CkwnPTQUF6/knDyAdScDfjTRGGbMqivPLvXfe4XughFhcWhZatKk2jZWuoBSgcNz"></script>
     <script crossorigin src="https://unpkg.com/react-dom@16.9.0/umd/react-dom.production.min.js"
         integrity="sha384-2MsSfEEGJ2Rogg7MLVzlu18tndW7K3SJ4i4b9kxTdVP9Mew3syLP9P+ieLx1BjCe"></script>
-<script type="text/javascript" src="vendors~main.3b6c397658927d4bff93.js"></script><script type="text/javascript" src="main.4a30c14e2115eaeff086.js"></script></body>
+<script type="text/javascript" src="vendors~index.v1.ph.js" integrity="sha256-qHBpP6MXBWYG+RA5Fz6gic6jnVCQ0wUr9lvtyzzK/3w= sha384-5E51+hY4MwmdoCJ/PYIZO0nZNTBSWvsw4gPtFkirrths6c2Cd1e5/lPiPSDFOe7w" crossorigin="anonymous"></script><script type="text/javascript" src="index.v1.ph.js" integrity="sha256-OThBVWXHQsqpkMIvcqndC1lBAcXeqHJDLt+e+RfAHRw= sha384-6Onxdgjo7+xSb02yZDaaBjyNOQyMsOuT+2rY7OJywBSyWzsFGk9Ojag9zT5at/db" crossorigin="anonymous"></script><script type="text/javascript" src="serviceWorker.v1.ph.js" integrity="sha256-VXazEBRanpfvTSQr6W2N3Ml5eGIwXAOecVv0VjiTwO0= sha384-tGWKJTudPZMYVYlZZcNypwbKGh4LW+qT31k9tZuzdrHHH8/MRJ3LNBjXWqBlP0P5" crossorigin="anonymous"></script></body>
 
 </html>
