--- a/index.html
+++ b/index.html
@@ -67,13 +67,10 @@
         integrity="sha384-CkwnPTQUF6/knDyAdScDfjTRGGbMqivPLvXfe4XughFhcWhZatKk2jZWuoBSgcNz"></script>
     <script crossorigin src="https://unpkg.com/react-dom@16.9.0/umd/react-dom.production.min.js"
         integrity="sha384-2MsSfEEGJ2Rogg7MLVzlu18tndW7K3SJ4i4b9kxTdVP9Mew3syLP9P+ieLx1BjCe"></script>
-    <script defer src="https://www.gstatic.com/firebasejs/6.4.2/firebase-app.js"
-        integrity="sha384-riKBN+5FMdW+VE6BNfWACGVkyXyArfM12paqTMRuRM1SaA+0+4OgHDp+0L9E9FEB"></script>
-    <script defer src="https://www.gstatic.com/firebasejs/6.4.2/firebase-auth.js"
-        integrity="sha384-mW/UCBLDBedEwcgREUAbHevjH2aDfxot/22RvaBLzrz5tJhgMUIQcANQRP4du+b6"></script>
-    <script defer src="https://www.gstatic.com/firebasejs/6.4.2/firebase-firestore.js"
-        integrity="sha384-5DlSbh8pNvNsWCylV9GOscATjDwIoNSKxzsHrsFBR4pQlNR0Tkvlt/8AAlRa5xeL"></script>
+    <script defer src="https://www.gstatic.com/firebasejs/6.4.2/firebase-app.js"></script>
+    <script defer src="https://www.gstatic.com/firebasejs/6.4.2/firebase-auth.js"></script>
+    <script defer src="https://www.gstatic.com/firebasejs/6.4.2/firebase-firestore.js"></script>
     <script defer src="./init-firebase.js"></script>
-<script type="text/javascript" src="vendors~index.v1.ph.js" integrity="sha256-qHBpP6MXBWYG+RA5Fz6gic6jnVCQ0wUr9lvtyzzK/3w= sha384-5E51+hY4MwmdoCJ/PYIZO0nZNTBSWvsw4gPtFkirrths6c2Cd1e5/lPiPSDFOe7w" crossorigin="anonymous"></script><script type="text/javascript" src="index.v1.ph.js" integrity="sha256-OThBVWXHQsqpkMIvcqndC1lBAcXeqHJDLt+e+RfAHRw= sha384-6Onxdgjo7+xSb02yZDaaBjyNOQyMsOuT+2rY7OJywBSyWzsFGk9Ojag9zT5at/db" crossorigin="anonymous"></script><script type="text/javascript" src="serviceWorker.v1.ph.js" integrity="sha256-Yeg39FNNfA4mNe+9XAkWPkoSrsSgHBAwLzjxfUBX4O8= sha384-2p0WGNJDy7zWJ3Lhr4Hu6YaPso/b9ku5ELM7G8g/VpipI4h547hG+XJlQ1AGiOSD" crossorigin="anonymous"></script></body>
+<script type="text/javascript" src="vendors~index.v1.ph.js" integrity="sha256-6g8SEJTUfzF27qldIWlg4yTfRLQqIKYTOuUftU5k64E= sha384-QQUlchvazDZGXnN6+G2UsjuM9el0t3pCX1RHSiNlaCSPT9HwcOpLJbx4GX9l58W8" crossorigin="anonymous"></script><script type="text/javascript" src="index.v1.ph.js" integrity="sha256-T/mKxu1v8b7ea6QVuKoIXBDtPyj4IO4YQIjKTs4faq0= sha384-uFJCr0YFd16P0sof2LGRsQlEfiutsaKCanCBNMwv6fs8LURQQlxZnQ/sO3KV6SDX" crossorigin="anonymous"></script><script type="text/javascript" src="serviceWorker.v1.ph.js" integrity="sha256-Yeg39FNNfA4mNe+9XAkWPkoSrsSgHBAwLzjxfUBX4O8= sha384-2p0WGNJDy7zWJ3Lhr4Hu6YaPso/b9ku5ELM7G8g/VpipI4h547hG+XJlQ1AGiOSD" crossorigin="anonymous"></script><script type="text/javascript" src="firebase.v1.ph.js" integrity="sha256-c18BtMVc8gfNfDUVzEGrIKoGwRMM7PSj+rS7nJBLfEI= sha384-kN8xVyTzaTt/TxEd60eLBEYLgIeVx4CGSvcpZTKLTVQHh1uN9/Y9VdOBKptoVD54" crossorigin="anonymous"></script></body>
 
 </html>
