--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <style> .unsupported-browser { display: none } div.app-spinner { position: fixed; top: 50%; left: 50% } @-webkit-keyframes app-spinner { to { transform: rotate(1turn) } } @keyframes app-spinner { to { transform: rotate(1turn) } } div.app-spinner:before { content: ""; box-sizing: border-box; position: absolute; top: 50%; left: 50%; width: 40px; height: 40px; margin-top: -20px; margin-left: -20px; border-radius: 50%; border-color: #07d transparent; border-style: solid; border-width: 2px; -webkit-animation: app-spinner .8s ease infinite; animation: app-spinner .8s ease infinite } </style>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<link href="index.v1.ph.css" rel="stylesheet" integrity="sha256-QjrYVixrX26Zigp+Fiqrz6k8DpsVTReAwZnKZIoiiFQ= sha384-FU7AKajrPAssPvGedLwCdCHFd/i33seNWMR6ilW/FLEGongjOtRdfPRVGxwGtTFV" crossorigin="anonymous"></head>
+<link href="index.v1.ph.css" rel="stylesheet"></head>
 
 <body>
     <div class="unsupported-browser">
@@ -30,6 +30,6 @@
     <script defer src="https://www.gstatic.com/firebasejs/6.4.2/firebase-app.js"></script>
     <script defer src="https://www.gstatic.com/firebasejs/6.4.2/firebase-auth.js"></script>
     <script defer src="https://www.gstatic.com/firebasejs/6.4.2/firebase-firestore.js"></script>
-<script type="text/javascript" src="vendors~index.v1.ph.js" integrity="sha256-6g8SEJTUfzF27qldIWlg4yTfRLQqIKYTOuUftU5k64E= sha384-QQUlchvazDZGXnN6+G2UsjuM9el0t3pCX1RHSiNlaCSPT9HwcOpLJbx4GX9l58W8" crossorigin="anonymous"></script><script type="text/javascript" src="index.v1.ph.js" integrity="sha256-cwA9NSJ4TMgGXkFP4f+67N4FXopCVwm/Tptl4xbA1c0= sha384-kOdfwuyFszc0tqa8Gn9TFrwvhw4i7BFrlkgZw21so5sZexWAt+zf4FKn1h41uL7F" crossorigin="anonymous"></script><script type="text/javascript" src="serviceWorker.v1.ph.js" integrity="sha256-KV13YTzibcZm03zs0DpZPLOAQXimKUNcKOTNyJSFVZQ= sha384-6xjRTZ8XvsFDTL9ItgU+2ROW9dONhc70+hhneHMBpGI7g6l0ICIjBkQxJRRWv7xZ" crossorigin="anonymous"></script><script type="text/javascript" src="firebase.v1.ph.js" defer integrity="sha256-vJUof2xs5366QzJyh9fduacvGF9JbzMch/bR9Q1WfNc= sha384-sLUrdWVzfZHDdak4vtxpLWQLyp5G5RV7lpGVVrVozgURuFtVmQw2QJzgClA/o2FL" crossorigin="anonymous"></script></body>
+<script type="text/javascript" src="vendors~index.v1.ph.js"></script><script type="text/javascript" src="index.v1.ph.js"></script><script type="text/javascript" src="serviceWorker.v1.ph.js"></script><script type="text/javascript" src="firebase.v1.ph.js" defer></script></body>
 
 </html>
