--- a/index.html
+++ b/index.html
@@ -29,9 +29,6 @@
         integrity="sha384-CkwnPTQUF6/knDyAdScDfjTRGGbMqivPLvXfe4XughFhcWhZatKk2jZWuoBSgcNz"></script>
     <script crossorigin src="https://unpkg.com/react-dom@16.9.0/umd/react-dom.production.min.js"
         integrity="sha384-2MsSfEEGJ2Rogg7MLVzlu18tndW7K3SJ4i4b9kxTdVP9Mew3syLP9P+ieLx1BjCe"></script>
-    <script defer src="https://www.gstatic.com/firebasejs/6.4.2/firebase-app.js"></script>
-    <script defer src="https://www.gstatic.com/firebasejs/6.4.2/firebase-auth.js"></script>
-    <script defer src="https://www.gstatic.com/firebasejs/6.4.2/firebase-firestore.js"></script>
-<script type="text/javascript" src="vendors~index.v1.ph.js"></script><script type="text/javascript" src="index.v1.ph.js"></script><script type="text/javascript" src="serviceWorker.v1.ph.js"></script><script type="text/javascript" src="firebase.v1.ph.js" defer></script></body>
+<script type="text/javascript" src="vendors~index.v1.ph.js"></script><script type="text/javascript" src="index.v1.ph.js"></script><script type="text/javascript" src="serviceWorker.v1.ph.js"></script></body>
 
 </html>
