--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta content="ie=edge" http-equiv="x-ua-compatible">
     <title>Plain Hardware</title>
     <meta name="Description" content="Plain Hardware">
+    <meta name="theme-color"  content="#ffffff">
     <link href="static/assets/favicon.ico" rel="shortcut icon" />
     <meta name="robots" content="noindex">
     <link rel="manifest" href="manifest.json" />
