--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="Description" content="Plain Hardware">
     <meta name="theme-color"  content="#ffffff">
     <link href="static/assets/favicon.ico" rel="shortcut icon" />
+    <link rel="apple-touch-icon" href="istatic/assets/apple-touch-icon.v1.ph.png">
     <meta name="robots" content="noindex">
     <link rel="manifest" href="manifest.json" />
     <meta http-equiv="Content-Security-Policy"
