--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color"  content="#ffffff">
     <link href="static/assets/favicon.ico" rel="shortcut icon" />
     <link rel="apple-touch-icon" href="istatic/assets/apple-touch-icon.v1.ph.png">
-    <meta name="robots" content="noindex, nofollow.">
+    <meta name="robots" content="noindex, nofollow">
     <link rel="manifest" href="manifest.json" />
     <meta http-equiv="Content-Security-Policy"
         content=" default-src 'self'; script-src 'self' https://unpkg.com https://www.gstatic.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src https://fonts.gstatic.com; connect-src https://www.googleapis.com https://securetoken.googleapis.com;">
