--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <link href="index.v1.ph.css" rel="stylesheet"></head>
 
 <body>
+    <noscript> <h1>You don’t have javascript enabled.</h1> <p>Please enable it to get the full experience.</p> </noscript>
     <div class="unsupported-browser">
         Sorry, your browser is not supported. Please upgrade to the latest version or switch your browser to use this
         site. See <a href="http://outdatedbrowser.com/">outdatedbrowser.com</a> for options.
